--- a/patient-management/patient-service/src/main/resources/application.properties
+++ b/patient-management/patient-service/src/main/resources/application.properties
@@ -17,7 +17,25 @@ spring.application.name=patient-service
 #spring.jpa.hibernate.ddl-auto=update
 #
 ##it will perform the checks against the database everytime we start the app
-#spring.sql.init.mode=always
+#spring.sql.init.mode=always\
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://patient-service-db:5432/db
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers = kafka:9092
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.ByteArraySerializer
+
+
+# Billing Service gRPC
+billing.service.address=billing-service
+billing.service.grpc.port=9001
 
 server.port=4000
 
